k8s-manifest/form/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interactive-form
  labels:
    app: form
spec:
  replicas: 2
  selector:
    matchLabels:
      app: form
  template:
    metadata:
      labels:
        app: form
    spec:
      containers:
      - name: form
        image: azimuth3d/form-builder:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "900Mi"
            cpu: "900m"
          requests:
            memory: "300Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
