k8s-manifest/form/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: form
spec:
  selector:
    app: form
  ports:
  - port: 80
    targetPort: 3000
